--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -11,6 +11,7 @@
     <h2>Product' List</h2>
     <a th:href="@{/product/create}" class="btn btn-primary btn-sm mb-3">Create Product</a>
     <a th:href="@{/product/edit}" class="btn btn-primary btn-sm mb-3">Edit Product</a>
+    <a th:href="@{/product/delete}" class="btn btn-primary btn-sm mb-3">Delete Product</a>
 
     <table border="1" class="table table-striped table-responsive-md">
         <thead>
