--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -22,8 +22,8 @@
         </thead>
         <tbody>
         <tr th:each="product: ${products}">
-            <td th:text="${product.productName}"></td>
-            <td th:text="${product.productQuantity}"></td>
+            <td id="productName" th:text="${product.productName}"></td>
+            <td id="productQuantity" th:text="${product.productQuantity}"></td>
         </tr>
         </tbody>
     </table>
